# bot-connect-docs

./: .gitignore  README.md  README.txt  action_tests.md  docs.md  forget.md  index.md  master_modules.md  package.json  pc.md  project-structure.html  robot_master.md  robot_slave.md  run_and_sync.md  structure.md
.vitepress/: config.mjs
architecture/: index.md
asr/: asr_ws.py  requirements.txt  send_mock_audio.py  ws_audio_asr.py
backend/: README-node.txt  asr_worker.py  config.json  package-lock.json  package.json  requirements.txt  send_cmd.py  server.js  server.py
common/: action_presets.py  preset_motion_client.py  role_config.py  runtime.py  stream_info.py  tts_client.py  ws_client.py
config/: env_pc_sim.sh  env_robot_master.sh  env_robot_slave.sh  local.ps1  local.ps1.bak  local.sh  master_config.json  robot_example.sh  slave_config.json
connection/: index.md
development/: guide.md  sensor-code.md
docs/: README.md  index.md  package-lock.json  run_robot_real.md  status_dashboard.md
electron/: main.cjs  preload.cjs
experience/: dual-network.md  index.md  vscode-ssh.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
guide/: container.md  remote-debug.md  setup.md
master/: audio_upload_handler.py  client.py  status_hook_example.py
more/: index.md
official/: changelog.md  dup_report.md  end_notes.md  examples-cpp.md  examples-py.md  feedback.md  genindex.md  index.md
project/: monitor.md  (+4 more)
ros2_pkgs/x2_bot/: README.md  package.xml  setup.py
ros2_pkgs/x2_bot/x2_bot/: __init__.py  mic_sub_node.py  tts_client_node.py
(+481 files in other folders)
